--- a/package.json
+++ b/package.json
@@ -23,15 +23,21 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@tanstack/react-query": "^5.74.4",
     "@zayne-labs/callapi": "^1.7.2",
+    "@zxcvbn-ts/core": "^3.0.4",
+    "@zxcvbn-ts/language-common": "^3.0.4",
+    "@zxcvbn-ts/language-en": "^3.0.2",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "flag-icon-css": "^4.1.7",
     "flag-icons": "^7.3.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.486.0",
     "next": "14.2.26",
+    "qrcode.react": "^4.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.55.0",
@@ -43,7 +49,7 @@
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "world-countries": "^5.1.0",
-    "zod": "^3.24.2",
+    "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
