--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "flag-icon-css": "^4.1.7",
     "flag-icons": "^7.3.2",
     "lottie-react": "^2.4.1",
