--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-progress": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.8",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slider": "^1.2.3",
@@ -47,6 +47,7 @@
     "react-select": "^5.10.1",
     "react-select-country-list": "^2.2.3",
     "recharts": "^2.15.2",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
